bug fix draw rect out of bounds

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -88,11 +88,6 @@ h4 {
     margin-block-end: 0.1em;
 }
 
-#graph {
-    height: 100%;
-    width: 100%;
-}
-
 .box {
     padding: 10px;
 }
